# discipline-mcp

./: .gitignore  DESIGN.md  README.md  pyproject.toml
docs/superpowers/specs/: 2026-06-14-web-viewer-design.md
src/discipline_mcp/: __init__.py  schema.py  server.py  store.py  web.py
tests/: test_chain.py  test_hardening.py  test_replay.py  test_server.py  test_validation.py  test_value_fields.py  test_web.py
